more bugs squashed

--- a/Jayden.css
+++ b/Jayden.css
@@ -56,6 +56,13 @@ nav ul li a:hover {
 	margin-left: auto;
 	margin-right: auto;
 }
+.rotate-and-center{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
+	
+}
 #maincontent{
 		margin-left: 150px;
 		padding-left: 0;
